trying to fix desktop background image cutoff

--- a/style.css
+++ b/style.css
@@ -12,9 +12,6 @@ body:before {
   content: "";
   display: block;
   position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
   height: 100%;
   z-index: -10;
   background: url("buddha-background.JPG") no-repeat center center;
